# pegatexto-rs

./: .gitignore  Cargo.toml
assembler/: Cargo.toml  assembly_grammar.asm  assembly_grammar.txt
compiler/: Cargo.toml
compiler/src/: lib.rs  main.rs
disassembler/: Cargo.toml
disassembler/src/: lib.rs  main.rs
src/: address.rs  bytecode.rs  character_class.rs  expression.rs  instruction.rs  lib.rs  matcher.rs  opcode.rs  vm.rs
src/bytecode/: builder.rs  instruction.rs  opcode.rs  parser.rs
vm/: Cargo.toml
vm/src/: bytecode.rs  character_class.rs  expression.rs  grammar.rs  lib.rs  matcher.rs  utils.rs
vm/src/bytecode/: address.rs  builder.rs  instruction.rs  opcode.rs  parser.rs
vm/src/grammar/: expression.rs
