[package]
name = "pegatexto_disassembler"
version = "0.1.0"
authors = ["gilzoide <gilzoide@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pegatexto_vm = { path = "../vm" }

[lib]
name = "pegatexto_disassembler"
